cmake_minimum_required(VERSION 2.5)
project(mymuduo)

# mymuduo 沌缂璇 so ㄦ搴锛璁剧疆ㄦ搴璺寰锛惧ㄦ圭褰 lib 浠跺す涓17
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# 璁剧疆璋璇淇℃ 浠ュ  C++11 璇瑷
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -fPIC")

# 瀹涔涓缂璇婧浠ｇ浠
aux_source_directory(. SRC_LIST)
# 缂璇ㄦ搴 mymuduo
add_library(mymuduo SHARED ${SRC_LIST})